<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/bg_register">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:baselineAligned="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="25dp"
            android:id="@+id/tvWelcome"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn100"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_100level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <Button
            android:id="@+id/btn200"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_200level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn300"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_300level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <Button
            android:id="@+id/btn400"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_400level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <Button
            android:id="@+id/btn500"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_500level"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>


</RelativeLayout>
