<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/bg_register">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:baselineAligned="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select1"
            android:textSize="25dp"
            android:id="@+id/tvWelcome"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnstuAtt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_stuList"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <Button
            android:id="@+id/btntakeAtt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_takeAtt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnViweAtt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_viewAtt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>
        </RelativeLayout>